--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "binary",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://priyyanshi.github.io/binary-traversals",
   "dependencies": {
     "@material-ui/core": "^4.9.5",
     "acorn": "^7.1.1",
@@ -22,9 +21,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
