--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.9.5",
+    "@material-ui/core": "^4.10.1",
     "acorn": "^7.1.1",
     "bootstrap": "^4.4.1",
     "jquery": "^3.5.1",
+    "nodemon": "^2.0.4",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.17",
     "react-css-grid": "^2.0.0-0",
