--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "binary",
   "version": "0.1.0",
+  "homepage": "https://priyyanshi.github.io/Data-structures-and-algos/",
   "private": true,
   "dependencies": {
     "@babel/core": "7.8.4",
