--- a/package.json
+++ b/package.json
@@ -5,24 +5,24 @@
   "private": true,
   "dependencies": {
     "@babel/core": "7.8.4",
-    "@material-ui/core": "^4.10.1",
+    "@material-ui/core": "^4.11.0",
     "@svgr/webpack": "4.3.3",
-    "@typescript-eslint/eslint-plugin": "^2.10.0",
-    "@typescript-eslint/parser": "^2.10.0",
-    "acorn": "^7.1.1",
+    "@typescript-eslint/eslint-plugin": "^2.34.0",
+    "@typescript-eslint/parser": "^2.34.0",
+    "acorn": "^7.4.0",
     "babel-eslint": "10.0.3",
-    "babel-jest": "^26.0.1",
+    "babel-jest": "^26.3.0",
     "babel-loader": "8.0.6",
     "babel-plugin-named-asset-import": "^0.3.6",
-    "babel-preset-react-app": "^9.1.1",
-    "bootstrap": "^4.5.0",
+    "babel-preset-react-app": "^9.1.2",
+    "bootstrap": "^4.5.2",
     "camelcase": "^5.3.1",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
     "css-loader": "3.4.2",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
     "eslint": "^6.8.0",
-    "eslint-config-react-app": "^5.2.0",
+    "eslint-config-react-app": "^5.2.1",
     "eslint-loader": "3.0.3",
     "eslint-plugin-flowtype": "4.6.0",
     "eslint-plugin-import": "2.20.0",
@@ -33,7 +33,7 @@
     "fs-extra": "^8.1.0",
     "html-webpack-plugin": "4.0.0-beta.11",
     "identity-obj-proxy": "3.0.0",
-    "jest": "^26.0.1",
+    "jest": "^26.4.2",
     "jest-environment-jsdom-fourteen": "1.0.1",
     "jest-resolve": "24.9.0",
     "jest-watch-typeahead": "0.4.2",
@@ -41,22 +41,22 @@
     "mini-css-extract-plugin": "0.9.0",
     "nodemon": "^2.0.4",
     "optimize-css-assets-webpack-plugin": "5.0.3",
-    "p5": "^1.0.0",
+    "p5": "^1.1.9",
     "pnp-webpack-plugin": "1.6.0",
     "postcss-flexbugs-fixes": "4.1.0",
     "postcss-loader": "3.0.0",
     "postcss-normalize": "8.0.1",
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "4.0.1",
-    "react": "^16.9.0",
+    "react": "^16.13.1",
     "react-app-polyfill": "^1.0.6",
-    "react-bootstrap": "^1.0.1",
+    "react-bootstrap": "^1.3.0",
     "react-css-grid": "^2.0.0-0",
-    "react-dev-utils": "^10.2.0",
-    "react-dom": "^16.9.0",
-    "react-table": "^7.0.0-rc.15",
+    "react-dev-utils": "^10.2.1",
+    "react-dom": "^16.13.1",
+    "react-table": "^7.5.0",
     "react-vis": "^1.11.7",
-    "recharts": "^2.0.0-beta.1",
+    "recharts": "^2.0.0-beta.6",
     "resolve": "1.15.0",
     "resolve-url-loader": "3.1.1",
     "sass-loader": "8.0.2",
@@ -66,7 +66,7 @@
     "terser-webpack-plugin": "2.3.4",
     "ts-pnp": "1.1.5",
     "url-loader": "2.3.0",
-    "uuid": "^8.1.0",
+    "uuid": "^8.3.0",
     "webpack": "4.41.5",
     "webpack-dev-server": "^3.11.0",
     "webpack-manifest-plugin": "2.2.0",
@@ -74,6 +74,8 @@
   },
   "scripts": {
     "start": "node scripts/start.js",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js"
   },
